Fixed alignments and navbar position, restricted input, added more styles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,7 @@ header {
   overflow: hidden;
   width: 100%;
   top: 0;
+  z-index: 2;
   text-align: center;
   background-color: white;
   font-size: 15px;
